# PktMask

./: .coverage  .cursorignore  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AUTOMATED_TESTING_DIALOG_FIX.md  AUTOMATED_TESTING_REBUILD_SUMMARY.md  BUILD_FIX_REPORT.md  CHANGELOG.md  CLEANUP_REPORT.md  COMPATIBILITY_LAYER_REMOVAL_SUMMARY.md  ENHANCED_MASK_RULES_IMPLEMENTATION.md  GITHUB_PR_INSTRUCTIONS.md  GLOBAL_IP_MAPPING_ACCUMULATION_FIX.md  GUI_NAMING_AND_MASKSTAGE_FIX_SUMMARY.md  GUI_SCRIPT_MASKSTAGE_TROUBLESHOOTING_GUIDE.md  GUI_vs_Direct_MaskStage_Call_Analysis.md  HTTP_CODE_REMOVAL_PHASE_7_8_COMPLETION_SUMMARY.md  HTTP_Code_Removal_Plan.md  HTTP_Header_Preservation_Implementation_Plan.md  HTTP_SCANNING_PHASE5_COMPLETION_SUMMARY.md  HTTP_Scanning_Based_Optimization_Plan_Claude.md  HTTP_Stream_Parsing_Enhancement_Plan_Gemini_v2.md  INTERNATIONALIZATION_COMPLETE_REPORT.md  KEEP_RULE_SET_PROCESSING_ANALYSIS.md  LICENSE  MARKER_PRECISION_MIGRATION_SUMMARY.md  MASKER_DEFAULT_MASKING_MODIFICATION.md  MASKSTAGE_CLEANUP_REPORT.md  MASKSTAGE_PROBLEMS_SOLUTION.md  MULTIPLE_TLS_MESSAGES_FIX_SUMMARY.md  MULTI_LAYER_ENCAPSULATION_IMPLEMENTATION_PLAN.md  OPTIMIZED_OVERLAPPING_TESTS_SUMMARY.md  P0_ISSUE_1_SUMMARY.md  PACKAGING_GUIDE.md  PHASE_1_2_COMPLETION_SUMMARY.md  PHASE_1_DAY_5_COMPLETION_SUMMARY.md  PHASE_2_IP_ANONYMIZATION_ENHANCEMENT_SUMMARY.md  PHASE_3_HEADER_ESTIMATION_OPTIMIZATION_SUMMARY.md  (+275 more)
.tests_tls_trim/: README.md  run_trim_batch.py  verification.py
algorithms_backup_20250610_113902/: __init__.py
assets/: PktMask.icns
config/: __init__.py  naming_aliases.yaml
configs/: validation_test_config.json
demo_test_reports/: coverage.json  test_summary_20250609_211534.html  test_summary_20250609_211534.json  unit_results.xml
docs/: ARCHITECTURE_UNIFIED.md  CLI_SIMPLIFIED_GUIDE.md  CLI_UNIFIED_GUIDE.md  COMPREHENSIVE_COVERAGE_SUMMARY.md  CROSS_PACKET_TLS23_MASKING_FIX.md  CROSS_PLATFORM_TSHARK_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  DIRECTORY_MIGRATION_STATUS.md  DIRECTORY_STRUCTURE_MIGRATION_PLAN.md  DOCS_DIRECTORY_STRUCTURE_GUIDE.md  DOCUMENTATION_SYSTEM_IMPLEMENTATION_REPORT.md  DOCUMENT_STATUS.md  ENHANCED_MASK_STAGE_API_DOCUMENTATION.md  ENHANCED_REAL_DATA_TESTING_SOLUTION.md  ENHANCED_TRIMMER_DELETION_PLAN.md  ENHANCED_TRIMMER_DEPRECATION_PLAN.md  ENHANCED_TRIM_IMPLEMENTATION_DETAILS.md  ENHANCED_TRIM_IMPLEMENTATION_ROADMAP.md  ENHANCED_TRIM_PAYLOADS_DESIGN_PROPOSAL.md  ENHANCED_TRIM_PHASE1_1_COMPLETION_SUMMARY.md  EVENTS_MODULE_SUMMARY.md  GITIGNORE_RECOMMENDATIONS.md  GUI_AUTOMATED_TESTING_SOLUTION.md  ICMP_NESTED_TCP_MISDETECTION.md  INDEPENDENT_MASKER_INTEGRATION_PLAN.md  INDEPENDENT_MASKER_SIMPLIFICATION_PLAN.md  INDEPENDENT_PCAP_MASKER_API_REFERENCE.md  MASKING_LOGIC_COMPARISON_ANALYSIS.md  MASK_STAGE_EXECUTION_FLOW_ANALYSIS.md  MASK_STAGE_REFACTOR_DESIGN_FINAL.md  MIGRATION_IMPROVEMENTS_COMPLETED.md  MULTI_TLS_RECORD_MASKING_FIX.md  Naming_Consistency_Guide.md  OVERALL_IMPLEMENTATION_PLAN.md  PAYLOAD_TRIMMING_VALIDATION_GUIDE.md  PHASE1_1_DATA_STRUCTURES_COMPLETION_SUMMARY.md  PHASE1_2_BLIND_MASKER_COMPLETION_SUMMARY.md  PHASE1_3_API_COMPLETION_SUMMARY.md  PHASE1_4_API_COMPLETION_SUMMARY.md  PHASE1_TCP_PAYLOAD_MASKER_API_REDESIGN.md  (+79 more)
examples/: advanced_usage.py  basic_usage.py  performance_testing.py
hooks/: hook-pydantic.py
output/: recipe_test.pcap  test_masked.pcap
performance_results/: baseline_report_20250609_223352.json  baseline_report_20250609_223702.json  baseline_report_20250609_223838.json  baseline_report_20250609_224759.json  comparison_report_20250609_223702.json  comparison_report_20250609_223838.json  comparison_report_20250609_224759.json  detailed_results_20250609_223838.json  performance_report_20250609_223352.html  performance_report_20250609_223702.html
reports/: FINAL_REFACTOR_COMPLETION_REPORT.md  Stage4_Completion_Report.md  architecture_test_results.json  chinese_text_compliance.json  config_compatibility_report.json  config_migration_report.json  desktop_analysis.json  dual_strategy_validation_report.json  enhanced_mask_stage_performance_report.json  enhanced_validation_report.json  final_validation_report.json  import_update_report.json  progressive_migration_report.json  real_data_validation_report.json  refactor_validation_20250709_205234.json  refactor_validation_20250709_222929.json  samples_validation_report.html  test_report.html  tls_sample_validation_report.json
scripts/: README.md  analyze_tls_sample.py  audit_dependencies.py  check_tshark_dependencies.py  cross_platform_tshark_check.py  debug_cross_packet_tls23_masking_fixed.py  debug_tls23_cross_packet.py  diagnose_maskstage_components.py  docs_quality_check.sh  post_cleanup_validation.py  quick_windows_tshark_fix.py  run_http_auto_e2e.py  safe_cleanup_executor.py  test_dependency_checker.py  test_dependency_failure.py  test_dependency_integration_logic.py  test_gui_dependency_integration.py  test_tls_marker_file_processing.py  test_tshark_analyzer.py  test_unified_functionality.py  test_validation_performance.py  validate_cleanup_targets.py  validate_tcp_masking_simple.sh  validate_tls_sample.py  validate_tshark_setup.py  validate_windows_tshark.py  verify_http_zero_body.py  verify_x509sat_issue.py  windows_tshark_fix.py
src/: tls_1_2_plainip_tls_detailed_analysis.json  tls_1_2_plainip_tls_flow_analysis.json
test_outputs/: scenario_01_single_packet_output.pcap  scenario_02_range_match_output.pcap  scenario_04_bidirectional_flows_output.pcap  scenario_05_boundary_conditions_output.pcap  scenario_06_mixed_protocols_output.pcap  scenario_07_comprehensive_output.pcap  scenario_test_report.md  test_output.pcap
test_reports/: comprehensive_test_report_20250623_215837.md  comprehensive_test_report_20250623_215956.md  comprehensive_test_report_20250623_221313.md  comprehensive_test_report_20250623_221414.md  comprehensive_test_report_20250623_222940.md  comprehensive_test_report_20250623_224011.md  comprehensive_test_report_20250623_224220.md  integration_results.xml  junit.xml  report.html  unit_results.xml  (+5 more)
test_reports_demo/: junit.xml  (+1 more)
(+1075 files in other folders)
