[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pktmask"
version = "0.1.0"
description = "A GUI tool for masking IP addresses in pcap/pcapng files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "scapy>=2.5.0",
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0",
    "PyQt6_sip>=13.0.0",
    "markdown>=3.4.0",
    "jinja2>=3.1.0",
    "MarkupSafe>=3.0.2",
    "packaging>=25.0",
    "setuptools>=80.9.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-metadata",
    "pytest-qt",
    "coverage",
    "iniconfig",
    "pluggy"
]
build = [
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "altgraph",
    "macholib"
]

[project.urls]
Homepage = "https://github.com/yourusername/pktmask"
Documentation = "https://github.com/yourusername/pktmask#readme"
Repository = "https://github.com/yourusername/pktmask.git"
Issues = "https://github.com/yourusername/pktmask/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pktmask"]

[tool.pytest.ini_options]
addopts = "--cov=pktmask --cov-report=term-missing --cov-report=html --html=report.html --cov-fail-under=80"
testpaths = ["tests"] 