[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pktmask"
version = "0.2.0"
description = "A GUI tool for masking IP addresses in pcap/pcapng files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "scapy>=2.5.0,<3.0.0",  # 统一版本约束，兼容子packets要求
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0",
    "PyQt6_sip>=13.0.0",
    "markdown>=3.4.0",
    "jinja2>=3.1.0",
    "MarkupSafe>=3.0.2",
    "packaging>=25.0",
    "setuptools>=80.9.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "toml>=0.10.2",
    "networkx>=3.0.0",
    "pyshark>=0.6",
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "typing-extensions>=4.0.0;python_version<'3.10'"  # 从子packets合并
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "pytest-html",
    "pytest-metadata",
    "pytest-qt",
    "pytest-xdist",
    "coverage",
    "iniconfig",
    "pluggy",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest-mock>=3.0.0",
    "pytest-env",
    "isort>=5.0.0"  # 从子packets合并
]
build = [
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "altgraph",
    "macholib"
]
performance = [  # 新增性能监控组，从子packets合并
    "psutil>=5.9.0",
    "memory-profiler>=0.60.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/pktmask"
Documentation = "https://github.com/yourusername/pktmask#readme"
Repository = "https://github.com/yourusername/pktmask.git"
Issues = "https://github.com/yourusername/pktmask/issues"

[project.scripts]
pktmask = "pktmask.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pktmask"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/samples",
    "tests/samples/**",
    "tests/data",
    "tests/data/**",
    "tmp/**",
    "backup/**",
    "*.log",
    "*.tmp",
    ".DS_Store",
    "__pycache__/**"
]

[tool.pytest.ini_options]
addopts = "--cov=pktmask --cov-report=term-missing --cov-report=html --html=report.html --cov-fail-under=80"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "W503",  # line break before binary operator (conflicts with black)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]